Added a blog post, still working on v1

--- a/src/specifiedbehavior.web/specifiedbehavior.web/Views/Experiments/Index.cshtml
+++ b/src/specifiedbehavior.web/specifiedbehavior.web/Views/Experiments/Index.cshtml
@@ -10,8 +10,8 @@
     <h1>Blog</h1>
 
     <ul>
-        <li><strong>2023-05-14</strong> <a href="/blog/PlayingWithD3JS">Playing with D3JS</a></li>
-        <li><strong>2023-05-13</strong> <a href="/blog/ComparingGoogleBardWithChatGPT">Comparing Google Bard with ChatGPT</a></li>
+        <li><strong>2023-05-14</strong> <a href="/experiments/PlayingWithD3JS">Playing with D3JS</a></li>
+        <li><strong>2023-05-13</strong> <a href="/experiments/ComparingGoogleBardWithChatGPT">Comparing Google Bard with ChatGPT</a></li>
     </ul>
     
 </main>
