--- a/src/web/docs/src/.vuepress/styles/index.styl
+++ b/src/web/docs/src/.vuepress/styles/index.styl
@@ -6,3 +6,12 @@
 
 .home .hero img
   max-width 450px!important
+
+.ai-response {
+  border: solid 1px $accentColor;
+  border-radius: 4px;
+  color: #476582;
+  padding: 0.25rem 0.5rem;
+  margin: 0;
+  background-color: rgba(27,31,35,0.05);
+}
