--- a/src/web/docs/src/.vuepress/styles/index.styl
+++ b/src/web/docs/src/.vuepress/styles/index.styl
@@ -36,3 +36,9 @@
       &
         flex 0 0 50%
         max-width 50%
+
+.page-hero
+    text-align: center;
+  img
+    width: 40%
+    margin: auto
