--- a/src/web/docs/src/.vuepress/styles/index.styl
+++ b/src/web/docs/src/.vuepress/styles/index.styl
@@ -42,3 +42,9 @@
   img
     width: 40%
     margin: auto
+
+.theme-default-content:not(.custom) img
+  height: initial;
+  max-width: initial;
+  width: initial;
+  max-width: 25%;
